--- a/www/pages/index.html
+++ b/www/pages/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Hague Hackers is an academic and community-driven ethical hacking group aiming to enhance global cybersecurity awareness.">
+    <meta name="description"
+        content="The Hague Hackers is an academic and community-driven ethical hacking group aiming to enhance global cybersecurity awareness.">
 
     <!-- Title and Favicon -->
     <title>The Hague Hackers - Home</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/global.css"> <!-- Global styles -->
+    <link rel="stylesheet" href="../css/components/header.css"> <!-- Header styles -->
+    <link rel="stylesheet" href="../css/components/hero.css"> <!-- Hero styles -->
+    <link rel="stylesheet" href="../css/components/features.css"> <!-- Features styles -->
+    <link rel="stylesheet" href="../css/components/contact.css"> <!-- Contact form styles -->
+    <link rel="stylesheet" href="../css/components/footer.css"> <!-- Footer styles -->
+    <link rel="stylesheet" href="../css/pages/index.css"> <!-- Page-specific styles for index.html -->
 
     <!-- Google Fonts and Font Awesome -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Graduate&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Graduate&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <!-- Header Section -->
     <header>
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="img/logo.png" alt="The Hague Hackers Logo">
+                <img src="../img/logo/logo.png" alt="The Hague Hackers Logo">
             </a>
             <!-- Navigation -->
             <nav class="main-nav" aria-label="Main Navigation">
@@ -33,10 +43,10 @@
                     <i class="fas fa-bars" aria-hidden="true"></i>
                 </button>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="index.html">HOME</a></li>
-                    <li class="nav-item"><a href="about.html">OUR MISSION</a></li>
-                    <li class="nav-item"><a href="activities.html">ACTIVITIES</a></li>
-                    <li class="nav-item"><a href="contact.html">JOIN US</a></li>
+                    <li class="nav-item"><a href="./index.html">HOME</a></li>
+                    <li class="nav-item"><a href="./about.html">ABOUT US</a></li>
+                    <li class="nav-item"><a href="./activities.html">ACTIVITIES</a></li>
+                    <li class="nav-item"><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -59,20 +69,21 @@
                 <h2>Our Focus Areas</h2>
                 <div class="feature-grid">
                     <article class="feature-item">
-                        <img src="img/education.jpg" alt="Education and Knowledge Sharing" loading="lazy">
+                        <img src="../img/pages/index/education.jpg" alt="Education and Knowledge Sharing"
+                            loading="lazy">
                         <h3>Education and Knowledge Sharing</h3>
                         <p>Collaborative learning to empower individuals with cybersecurity expertise.</p>
                         <a href="education.html" class="btn">Learn More</a>
                     </article>
                     <article class="feature-item">
-                        <img src="img/ctf.jpg" alt="Capture the Flag Competitions" loading="lazy">
+                        <img src="../img/pages/index/ctf.jpg" alt="Capture the Flag Competitions" loading="lazy">
                         <h3>Capture the Flag Competitions</h3>
                         <p>Hands-on experience through participation in high-pressure CTF events.</p>
                         <a href="ctf.html" class="btn">Learn More</a>
                     </article>
                     <article class="feature-item">
-                        <img src="img/ethical_hacking.jpg" alt="Ethical Commitment" loading="lazy">
-                        <h3>Ethical Commitment</h3>
+                        <img src="../img/pages/index/ethical_hacking.jpg" alt="Ethical Commitment" loading="lazy">
+                        <h3>Ethical Committed Community</h3>
                         <p>Adhering to a strict ethical code to ensure responsible and legal hacking practices.</p>
                         <a href="ethics.html" class="btn">Learn More</a>
                     </article>
@@ -105,6 +116,7 @@
                 </form>
             </div>
         </section>
+
     </main>
 
     <!-- Footer Section -->
@@ -126,6 +138,7 @@
     </footer>
 
     <!-- External JavaScript File -->
-    <script src="js/main.js"></script>
+    <script type="module" src="js/global.js"></script>
 </body>
+
 </html>
