--- a/www/contact.html
+++ b/www/contact.html
@@ -1,22 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="The Hague Hackers is an academic and community-driven ethical hacking group aiming to enhance global cybersecurity awareness.">
 
-    <!-- Title and Favicon -->
-    <title>The Hague Hackers - Home</title>
+    <!-- Favicon -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./css/global.css"> <!-- Global styles -->
     <link rel="stylesheet" href="./css/components/header.css"> <!-- Header styles -->
-    <link rel="stylesheet" href="./css/components/hero.css"> <!-- Hero styles -->
-    <link rel="stylesheet" href="./css/components/cards.css"> <!-- Cards styles -->
-    <link rel="stylesheet" href="./css/components/contact.css"> <!-- Contact form styles -->
     <link rel="stylesheet" href="./css/components/footer.css"> <!-- Footer styles -->
-    <link rel="stylesheet" href="./css/pages/index.css"> <!-- Page-specific styles for index.html -->
+    <!-- Placeholder for Page-Specific Elements -->
+    <div id="head-placeholder"></div>
 
     <!-- Google Fonts and Font Awesome -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Graduate&display=swap"
@@ -24,4 +22,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+
 </head>
+
+<body>
+    <!-- Header Section -->
+    <div id="header-placeholder"></div>
+
+    <!-- Main Section -->
+    <main>
+
+        <!-- Contact Form -->
+        <div id="contact-placeholder"></div>
+
+    </main>
+
+    <!-- Footer Section -->
+    <div id="footer-placeholder"></div>
+
+    <!-- External JavaScript File -->
+    <script type="module" src="js/global.js"></script>
+</body>
+
+</html>
