--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<div id="head-placeholder"></div>
+<head>
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="./css/global.css"> <!-- Global styles -->
+    <link rel="stylesheet" href="./css/components/header.css"> <!-- Header styles -->
+    <link rel="stylesheet" href="./css/components/footer.css"> <!-- Footer styles -->
+    <!-- Placeholder for Page-Specific Elements -->
+    <div id="head-placeholder"></div>
+
+    <!-- Google Fonts and Font Awesome -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Graduate&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+
+</head>
+
 
 <body>
     <!-- Header Section -->
@@ -14,9 +38,6 @@
 
         <!-- Cards Section -->
         <div id="cards-placeholder"></div>
-
-        <!-- Contact Form -->
-        <div id="contact-placeholder"></div>
 
     </main>
 
