--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,9 @@
         <!-- Cards Section -->
         <div id="cards-placeholder"></div>
 
+        <!-- Sponsors Section -->
+        <div id="supporters-placeholder"></div>
+
     </main>
 
     <!-- Footer Section -->
