Fixed header scroll

--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,10 @@
 
 
 <body>
-    <!-- Header Section -->
-    <div id="header-placeholder"></div>
-
+    <header>
+        <!-- Header Section -->
+        <div id="header-placeholder"></div>
+    </header>
     <!-- Main Section -->
     <main>
         <!-- Hero Section -->
@@ -44,8 +45,10 @@
 
     </main>
 
-    <!-- Footer Section -->
-    <div id="footer-placeholder"></div>
+    <footer>
+        <!-- Footer Section -->
+        <div id="footer-placeholder"></div>
+    </footer>
 
     <!-- External JavaScript File -->
     <script type="module" src="js/global.js"></script>
