added scroll header to contact

--- a/www/contact.html
+++ b/www/contact.html
@@ -27,8 +27,10 @@
 </head>
 
 <body>
-    <!-- Header Section -->
-    <div id="header-placeholder"></div>
+    <header>
+        <!-- Header Section -->
+        <div id="header-placeholder"></div>
+    </header>
 
     <!-- Main Section -->
     <main>
@@ -38,8 +40,10 @@
 
     </main>
 
-    <!-- Footer Section -->
-    <div id="footer-placeholder"></div>
+    <footer>
+        <!-- Footer Section -->
+        <div id="footer-placeholder"></div>
+    </footer>
 
     <!-- External JavaScript File -->
     <script type="module" src="js/global.js"></script>
